# computing-workshop

./: CMakeLists.txt
.github/workflows/: cplus-ci.yml
app/: CMakeLists.txt
app/task1/: CMakeLists.txt
app/task1/include/: LinearSystemSolver.h  Matrix.h
app/task1/src/: LinearSystemSolver.cpp  Matrix.cpp  main.cpp
tests/: CMakeLists.txt  Test.cpp
